--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,13 @@ test:
 about:
   home: https://github.com/boto/s3transfer
   license: Apache 2.0
+  license_file: LICENSE.txt
+  license_family: Apache
   summary: 'An Amazon S3 Transfer Manager'
+  description: |
+    S3transfer is a Python library for managing Amazon S3 transfers.
+  doc_url: https://pypi.python.org/pypi/s3transfer
+  doc_source_url: https://github.com/boto/s3transfer/blob/develop/README.rst
 
 extra:
   recipe-maintainers:
