--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,10 @@ about:
   license_family: Apache
   summary: 'An Amazon S3 Transfer Manager'
   dev_url: https://github.com/boto/s3transfer
+  description: |
+    S3transfer is a Python library for managing Amazon S3 transfers.
+  doc_url: https://pypi.python.org/pypi/s3transfer
+  doc_source_url: https://github.com/boto/s3transfer/blob/develop/README.rst
 
 extra:
   recipe-maintainers:
