--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 
 requirements:
@@ -29,7 +29,7 @@ test:
 about:
   home: https://github.com/boto/s3transfer
   license_file: LICENSE.txt
-  license: Apache 2.0
+  license: Apache-2.0
   license_family: Apache
   summary: 'An Amazon S3 Transfer Manager'
   dev_url: https://github.com/boto/s3transfer
