--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,17 +1,18 @@
-{% set version = "0.7.0" %}
+{% set name = "s3transfer" %}
+{% set version = "0.10.1" %}
 
 package:
-  name: s3transfer
+  name: {{ name }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/s/s3transfer/s3transfer-{{ version }}.tar.gz
-  sha256: fd3889a66f5fe17299fe75b82eae6cf722554edca744ca5d5fe308b104883d2e
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 5683916b4c724f799e600f41dd9e10a9ff19871bf87623cc8f491cb4f5fa0a19
 
 build:
-  skip: true  # [py<37]
+  skip: true  # [py<38]
   number: 0
-  script: {{ PYTHON }} -m pip install . --no-deps -vv --no-build-isolation
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
 
 
 requirements:
@@ -22,7 +23,7 @@ requirements:
     - setuptools
   run:
     - python
-    - botocore >=1.12.36,<2.0a.0
+    - botocore >=1.33.2,<2.0a.0
 
 test:
   imports:
